Fix debug builds with GCC https://bugs.webkit.org/show_bug.cgi?id=195205

Unreviewed. Fix debug builds in GCC by removing
the constexpr-keyword for this function.


* runtime/CachedTypes.cpp:
(JSC::tagFromSourceCodeType):


Canonical link: https://commits.webkit.org/209538@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242262 268f45cc-cd09-0410-ab3c-d52691b4dbfc